# pyperclyp

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: python.yml
pyperclyp/: main.py
